--- a/test-Copy1.ipynb
+++ b/test-Copy1.ipynb
@@ -1003,24 +1003,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 275,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "933"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|method|\n",
+      "+------+\n",
+      "|  POST|\n",
+      "|  null|\n",
+      "|   GET|\n",
+      "+------+\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "dg.select(dg.columns[i:i+1]).distinct().count()"
+    "dg.select('method').distinct().show()"
    ]
   },
   {
@@ -1508,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 274,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1518,117 +1522,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+\n",
-      "|windowName|\n",
-      "+----------+\n",
-      "|          |\n",
-      "|          |\n",
-      "|_e_0i77   |\n",
-      "|_e_0i77   |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|          |\n",
-      "|_e_0y1F   |\n",
-      "|_e_0y1F   |\n",
-      "|_e_0y1F   |\n",
-      "|_e_0i77   |\n",
-      "|          |\n",
-      "+----------+\n",
+      "+------+\n",
+      "|method|\n",
+      "+------+\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "|GET   |\n",
+      "+------+\n",
       "only showing top 100 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "dg.select('`windowName`').filter(dg['`windowName`'].isNotNull()).show(100,False)"
+    "dg.select('`method`').filter(dg['`method`']!='').show(100,False)"
    ]
   },
   {
